<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_gm_group">
        <item
            android:id="@+id/menu_createGame"
            android:icon="@drawable/ic_quill"
            android:orderInCategory="200"
            android:title="@string/title_create_game_activity"/>
    </group>

    <group android:id="@+id/menu_player_group">
        <item
            android:id="@+id/menu_findGame"
            android:icon="@drawable/magnifyingglass"
            android:orderInCategory="200"
            android:title="@string/titleListGamesActivity"/>
    </group>

    <item
        android:id="@+id/menu_myAccount"
        android:icon="@drawable/ic_account"
        android:orderInCategory="200"
        android:title="@string/titleMyAccountActivity"/>

    <item
        android:id="@+id/menu_dice"
        android:icon="@drawable/ic_dice5"
        android:orderInCategory="200"
        android:title="@string/title_dice_activity"/>

    <item
        android:id="@+id/menu_rsp"
        android:orderInCategory="200"
        android:icon="@drawable/ic_location"
        android:title="RSP"/>
</menu>